# amplify-genai-backend

./: .gitignore  .gitmodules  310Requirements.txt  311Requirements.txt  AI_CONTENT_POLICY_CHECK.md  CHANGELOG.md  CHANGES.md  CODE_REVIEW_BUGS_FOUND.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTION_COMPLIANCE_CHECK.md  CORRECTED_GITHUB_WORKFLOW.md  DEEP_DIVE_TAKEAWAYS.md  DEPLOYMENT_CHECKLIST_COMPLETE.md  FIX.md  GITHUB_WORKFLOW.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LITELLM_DEPLOYMENT_GUIDE.md  LITELLM_REFACTOR_MASTER_PLAN.md  LLM_PROMPTING_ANALYSIS.md  MERGE_SUMMARY.md  MISSING_PIECES_ANALYSIS.md  MODEL_ALIAS_CHANGELOG.md  MODEL_ALIAS_QUICKSTART.md  README.md  README_Local_Dev_Setup  RELEASE_NOTES_v0.9.0.md  ROLLBACK_RUNBOOK.md  ROUTER_ANALYSIS.md  SEPARATE_DEPLOYMENT_GUIDE.md  SEPARATE_DEPLOYMENT_SUMMARY.md  TEST_CHECKLIST.txt  backend_endpoint_tests.txt  build-layer.sh  dev-var.yml-example  dynamo_contents.py  dynamodb_table_analysis.md  enhance_dynamo.py  extract_dynamo_item_format.py  (+14 more)
.github/: dependabot.yml
.github-issues/: ISSUE_283_Model_Alias_Support.md  ISSUE_284_Alias_Management_APIs.md  PR_DESCRIPTION.md
amplify-agent-loop-lambda/: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile-fat  agent-requirements-fat.in  agent-requirements-fat.txt  agent-requirements-slim.txt  build-cached.sh  build-fat.sh  build.sh  deploy-cached.sh  deploy-timestamp.env  deploy.sh  event.json  generate-linux-lock.sh  local_run_vars.sh  local_server.py  pyproject.toml  requirements.txt  sample.py  serverless.yml
amplify-agent-loop-lambda/agent/: accounting.py  core.py  core2.py  llm_service.py  prompt.py  tool.py  util.py
amplify-agent-loop-lambda/agent/agents/: actions_agent.py  common_capabilities.py  summarizer_agent.py  workflow_agent.py
amplify-agent-loop-lambda/agent/capabilities/: action_result_memory.py  common_capabilities.py  tool_use.py  workflow_capability.py  workflow_model.py
amplify-agent-loop-lambda/agent/components/: agent_languages.py  agent_registry.py  common_goals.py  python_action_registry.py  python_environment.py  tool.py  util.py
amplify-agent-loop-lambda/agent/environments/: python_environment.py
amplify-agent-loop-lambda/agent/game/: action.py  environment.py  goal.py  languages.py
amplify-agent-loop-lambda/agent/tools/: agent_communication.py  code_exec.py  common_tools.py  database_tool.py  examples.py  file_handling.py  http.py  http_requests.py  ideation.py  llm_map_reduce.py  markdown_converter.py  ops.py  planning.py  powerpoint_tools.py  prompt_tools.py  python_action_registry.py  python_tool.py  shell.py  structured_editing.py  user_input.py  vanna_test.py  workflow.py  writing_tools.py
amplify-agent-loop-lambda/common/: accounting.py  actionSets.py  data_sources.py  encoders.py  get_chat_endpoint.py  ops.py  requestState.py  secrets.py  ses_email.py  validate.py
amplify-agent-loop-lambda/delegation/: api_keys.py
amplify-agent-loop-lambda/docs/: AGENT_FRAMEWORK.md  BUILDING_AGENTS.md  EMAIL_TO_AGENT.md  README.md
amplify-agent-loop-lambda/events/: email_events.py  email_note_events.py  email_scheduling_events.py  email_sender_controls.py  event_handler.py  event_templates.py  mock.py  s3_email_note_events.py  ses_message_functions.py
amplify-agent-loop-lambda/llm/: chat.py
amplify-agent-loop-lambda/old_agent/: core.py  prompt.py  tool.py
amplify-agent-loop-lambda/old_agent/agents/: common_capabilities.py
amplify-agent-loop-lambda/old_agent/game/: agent_registry.py  languages.py  memory.py
amplify-agent-loop-lambda/old_agent/tools/: common_tools.py  file_handling.py  workflow.py  writing_tools.py
amplify-agent-loop-lambda/samples/: two_agent_handoff.py  workflow_agent.py
amplify-agent-loop-lambda/scheduled_tasks_events/: local_test_handler.py  scheduled_tasks.py  scheduled_tasks_registry.py
amplify-agent-loop-lambda/service/: agent_queue.py  conversations.py  core.py  data_sources.py  database_handlers.py  email_events_handlers.py  handlers.py  local_driver.py  manage_events_handlers.py  models.py  requestState.py  scheduled_task_handlers.py  session_files.py  workflow_handlers.py
amplify-agent-loop-lambda/test-cases/: prompts.txt
amplify-agent-loop-lambda/workflow/: workflow_template_registry.py
amplify-agent-loop-lambda/workflows/: schedule.json
amplify-assistants/: GAIIN.code-workspace  README.md  package-lock.json  package.json  populate_env_vars.py  requirements.txt  serverless.yml  tools_ops.py
amplify-lambda-admin/: requirements.txt  serverless.yml  test_api_response.py  test_endpoint.py  test_prompt_cost_alert.py
amplify-lambda-api/: README.md  package-lock.json  package.json  requirements.txt  serverless.yml  tools_ops.py
amplify-lambda-artifacts/: package-lock.json  package.json  requirements.txt  serverless.yml
amplify-lambda-assistants-api/: .gitignore  requirements.txt  requirements_hold.txt  serverless.yml
amplify-lambda-assistants-api-google/: groups.py  requirements.txt  serverless.yml
amplify-lambda-assistants-api-google-sheets/: serverless.yml
amplify-lambda-assistants-api-office365/: DEPLOYMENT_EMAIL_WEBHOOKS.md  EMAIL_WEBHOOKS_README.md  TESTING_EMAIL_WEBHOOKS.md  requirements.txt  serverless.yml
amplify-lambda-basic-ops/: README.md  package-lock.json  package.json  requirements.txt  serverless.yml
amplify-lambda-custom-datasource/: requirements.txt  serverless.yml
amplify-lambda-js/: .gitignore  LITELLM_FIX_SUMMARY.md  assistantQueueRouter.js  backfill-record-type.js  debug-check-keys.mjs  index.js  indexApiG.js  notebookChatStream.js  package-lock.json  package.json  router.js  scan-all.mjs  scan-uuid.mjs  serverless.yml  test_litellm.py  test_model_detection.py  test_persistent_server.py
amplify-lambda-market/: .gitignore  package.json  requirements.txt  serverless.yml
amplify-lambda-memory/: requirements.txt  serverless.yml
amplify-lambda-ops/: package-lock.json  requirements.txt  serverless.yml  tools_ops.py
amplify-lambda-optimizer/: requirements.txt  serverless.yml
amplify-lambda-ses/: README.md  (+1 more)
(+821 files in other folders)
